[gd_scene load_steps=6 format=3 uid="uid://inyo3kaot6un"]

[ext_resource type="Script" path="res://scripts/UI/floater.gd" id="1_w1gj6"]
[ext_resource type="Script" path="res://scripts/UI/week_overlay.gd" id="1_wxd8j"]
[ext_resource type="Script" path="res://scripts/UI/tweak.gd" id="2_see5u"]

[sub_resource type="Gradient" id="Gradient_1fhh4"]
offsets = PackedFloat32Array(0, 0.330435, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.226087, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t7llu"]
gradient = SubResource("Gradient_1fhh4")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="WeekOverlay" type="Control" node_paths=PackedStringArray("next_week_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wxd8j")
next_week_button = NodePath("NextWeekTweak/NextWeekButton")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_t7llu")
expand_mode = 1

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 92.0
offset_top = 92.0
offset_right = -92.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
border_width = 2.0
metadata/_edit_lock_ = true

[node name="WeekTweak" type="Container" parent="."]
layout_mode = 2
offset_left = 92.0
offset_top = 92.0
offset_right = 325.0
offset_bottom = 149.0
script = ExtResource("2_see5u")
active = false
target_scale = Vector2(0.3, 1)
debug_rect_visible = false
metadata/_edit_lock_ = true

[node name="WeekFloater" type="Container" parent="WeekTweak"]
layout_mode = 2
script = ExtResource("1_w1gj6")
active = false
max_x_distance = 8.0
max_y_distance = 8.0
max_rotation_deg = 2.0
draw_movement_area = false

[node name="WeekLabel" type="Label" parent="WeekTweak/WeekFloater"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Week 1"

[node name="NameTweak" type="Container" parent="."]
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 92.0
offset_top = -149.0
offset_right = 365.0
offset_bottom = -92.0
script = ExtResource("2_see5u")
active = false
target_scale = Vector2(0.3, 1)
debug_rect_visible = false
metadata/_edit_lock_ = true

[node name="NameFloater" type="Container" parent="NameTweak"]
layout_mode = 2
script = ExtResource("1_w1gj6")
active = false
max_x_distance = 8.0
max_y_distance = 8.0
max_rotation_deg = 2.0
draw_movement_area = false

[node name="NameLabel" type="Label" parent="NameTweak/NameFloater"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Gilbert"

[node name="ActivityTweak" type="Container" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -413.0
offset_top = 92.0
offset_right = -92.0
offset_bottom = 149.0
grow_horizontal = 0
script = ExtResource("2_see5u")
active = false
side = 2
target_scale = Vector2(0.3, 1)
debug_rect_visible = false
metadata/_edit_lock_ = true

[node name="ActivityFloater" type="Container" parent="ActivityTweak"]
layout_mode = 2
script = ExtResource("1_w1gj6")
active = false
max_x_distance = 8.0
max_y_distance = 8.0
draw_movement_area = false

[node name="ActivityLabel" type="Label" parent="ActivityTweak/ActivityFloater"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Activity"
horizontal_alignment = 2

[node name="StatsTweak" type="Container" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -332.0
offset_right = -96.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("2_see5u")
active = false
side = 2
debug_rect_visible = false
metadata/_edit_lock_ = true

[node name="StatsContainer" type="VBoxContainer" parent="StatsTweak"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="NextWeekTweak" type="Container" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -304.0
offset_top = -154.0
offset_right = -92.0
offset_bottom = -92.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("2_see5u")
active = false
side = 2
target_scale = Vector2(0.3, 1)
debug_rect_visible = false
metadata/_edit_lock_ = true

[node name="NextWeekButton" type="Button" parent="NextWeekTweak"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ButtonLeft"
text = "Next"
metadata/_edit_lock_ = true
